--- a/react-vite/index.html
+++ b/react-vite/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./src/image/amplifyicon.jpeg" />
     <title>Amplify</title>
     <script src="https://kit.fontawesome.com/2687a23fd5.js" crossorigin="anonymous"></script>
   </head>
